RESOLVED FIXED134584
Removing an element with CSS -webkit-overflow-scrolling: touch breaks subsequent touch events
https://bugs.webkit.org/show_bug.cgi?id=134584
Summary Removing an element with CSS -webkit-overflow-scrolling: touch breaks subsequ...
Jon Honeycutt
Reported 2014-07-02 20:39:32 PDT
Created attachment 234311 [details] Repro case In a UIWebView, removing an element with css -webkit-overflow-scrolling: touch breaks subsequent touch events for a portion of the view. <rdar://problem/17202021>
Attachments
Repro case (2.33 KB, text/html)
2014-07-02 20:39 PDT, Jon Honeycutt
no flags
Patch (5.14 KB, patch)
2014-07-02 20:43 PDT, Jon Honeycutt
simon.fraser: review+
Jon Honeycutt
Comment 1 2014-07-02 20:43:04 PDT
Jon Honeycutt
Comment 2 2014-07-02 21:26:22 PDT
Note You need to log in before you can comment on or make changes to this bug.